# curvature_computation

./: CMakeLists.txt  README.md  package.xml
include/curvature_computation/: CurvatureUtils.h  TotalCurvature.h  TotalCurvaturePointCloud.h
include/curvature_computation/impl/: CurvatureUtils.hpp  TotalCurvature.hpp  TotalCurvaturePointCloud.hpp
src/: curvServer.cpp  curvServer_test.cpp  main.cpp
