<?xml version="1.0"?>
<package format="2">
  <name>curvature_computation</name>
  <version>0.0.1</version>
  <description>The curvature_computation package</description>

  <maintainer email="wu@jsk.imi.i.u-tokyo.ac.jp">wu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>jsk_recognition_utils</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
