<?xml version="1.0"?>
<package format="2">
  <name>curvature_computation</name>
  <version>0.0.1</version>
  <description>The curvature_computation package</description>

  <maintainer email="wu@jsk.imi.i.u-tokyo.ac.jp">wu</maintainer>
  <license>MIT</license>
  <author>hchen136@jhu.edu</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
